--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,2 +1,4 @@
 message = Hello world Maina 2!
 spring.cloud.stream.bindings.input=reservations
+eureka_hostname=discovery-service-tsonyo.bosh-lite.com
+eureka_port=80
