--- a/random-words-service.properties
+++ b/random-words-service.properties
@@ -1,4 +1,4 @@
-word_length = 5
-word_length_s = 5
+wordlength = 5
+wordlengths = 5
 eureka_hostname=discovery-service-tsonyo.bosh-lite.com
 eureka_port=80
