--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,4 +1,6 @@
 message = Hello world Maina 28!
+wordl = 5
+wordls = 5
 spring.cloud.stream.bindings.input=reservations
 eureka_hostname=discovery-service-tsonyo.bosh-lite.com
 eureka_port=80
