--- a/random-words-service.properties
+++ b/random-words-service.properties
@@ -1,4 +1,5 @@
 message = tashak tashak
+message2 = dwa tashaka dwa tashaka
 wordl = 5
 wordls = 5
 eureka_hostname=discovery-service-tsonyo.bosh-lite.com
