--- a/random-words-service.properties
+++ b/random-words-service.properties
@@ -1,6 +1,3 @@
-message = tashak tashak
-test = dwa tashaka dwa tashaka
-wordl = 5
-wordls = 5
+word_length = 5
 eureka_hostname=discovery-service-tsonyo.bosh-lite.com
 eureka_port=80
